[gd_scene load_steps=25 format=2]

[ext_resource path="res://SceneLoader/SceneLoader.tscn" type="PackedScene" id=1]
[ext_resource path="res://Context Screen/Photos/pt/firstContext_image4.png" type="Texture" id=2]
[ext_resource path="res://Fotos/context_screen_emptycity_pt.png" type="Texture" id=3]
[ext_resource path="res://Fotos/house2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Roboto_greek/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fotos/EnterButton.png" type="Texture" id=6]
[ext_resource path="res://Context Screen/NextStory.gd" type="Script" id=7]
[ext_resource path="res://Context Screen/Story1.gd" type="Script" id=8]
[ext_resource path="res://Context Screen/TranslationManager_firstScreen.gd" type="Script" id=9]
[ext_resource path="res://Context Screen/StoryManager.gd" type="Script" id=10]
[ext_resource path="res://Languages/TranslationManager.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/UISoundManager.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/Keyboard/Shortcut_enter.tscn" type="PackedScene" id=13]
[ext_resource path="res://UI/Keyboard/Shortcut_rightArrow.tscn" type="PackedScene" id=14]
[ext_resource path="res://Fotos/enterButton_pressed.png" type="Texture" id=15]
[ext_resource path="res://TTS Manager/TTS.tscn" type="PackedScene" id=16]
[ext_resource path="res://Fotos/TTSButton.png" type="Texture" id=18]
[ext_resource path="res://Fotos/TTSButtonSelected.png" type="Texture" id=19]
[ext_resource path="res://UI/Keyboard/Shortcut_space.tscn" type="PackedScene" id=20]
[ext_resource path="res://TTS Manager/RepeatTTS.gd" type="Script" id=21]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_size = 1
outline_color = Color( 0.894118, 0.388235, 0.054902, 1 )
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 22
outline_size = 1
outline_color = Color( 0.894118, 0.388235, 0.054902, 1 )
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 22
outline_size = 1
outline_color = Color( 0.894118, 0.388235, 0.054902, 1 )
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 22
outline_size = 1
outline_color = Color( 0.894118, 0.388235, 0.054902, 1 )
extra_spacing_char = 2
font_data = ExtResource( 5 )

[node name="ContextScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_horizontal_guides_": [ 585.95 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ -6.25492 ]
}

[node name="TranslationManager" parent="." instance=ExtResource( 11 )]
script = ExtResource( 9 )
space1 = NodePath("../GridContainer/Part1/Story1/HBoxContainer/VBoxContainer/WelcomeText")
space2 = NodePath("../GridContainer/Part2/Story2/HBoxContainer/VBoxContainer/Label")
space3 = NodePath("../GridContainer/Part3/Story3/HBoxContainer/VBoxContainer/Label")
space4 = NodePath("../GridContainer/Part4/Story4/HBoxContainer/VBoxContainer/Label")
image4 = NodePath("../GridContainer/Part4/Story4/HBoxContainer/VBoxContainer/Story4Image")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.894118, 0.388235, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UISoundManager" parent="." instance=ExtResource( 12 )]

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
finalButton = NodePath("../FinalButton")

[node name="Part1" type="Control" parent="GridContainer"]
margin_right = 510.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Story1" type="ColorRect" parent="GridContainer/Part1"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.964706, 0.921569, 0.862745, 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/Part1/Story1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Part1/Story1/HBoxContainer"]
margin_right = 380.0
margin_bottom = 298.0
rect_min_size = Vector2( 380, 298 )
size_flags_horizontal = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WelcomeText" type="Label" parent="GridContainer/Part1/Story1/HBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 380.0
margin_bottom = 123.0
rect_min_size = Vector2( 380, 100 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "Welcome "
valign = 1
autowrap = true

[node name="PlayersList" type="HBoxContainer" parent="GridContainer/Part1/Story1/HBoxContainer/VBoxContainer"]
margin_left = 190.0
margin_top = 224.0
margin_right = 190.0
margin_bottom = 224.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TTSButton" type="TextureButton" parent="GridContainer/Part1/Story1/HBoxContainer"]
margin_left = 384.0
margin_right = 484.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
size_flags_vertical = 2
toggle_mode = true
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 19 )
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}
textToSpeak = NodePath("../VBoxContainer/WelcomeText")

[node name="Space" parent="GridContainer/Part1/Story1/HBoxContainer/TTSButton" instance=ExtResource( 20 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.0
margin_top = -9.0
margin_right = 23.0
margin_bottom = 5.0

[node name="ButtonLayer" type="CanvasLayer" parent="GridContainer/Part1"]
layer = 2

[node name="NextStory1" type="TextureButton" parent="GridContainer/Part1/ButtonLayer"]
visible = false
anchor_left = 0.499
anchor_top = 0.248
anchor_right = 0.5
anchor_bottom = 0.248
margin_left = -49.976
margin_top = -49.8
margin_right = 49.0
margin_bottom = 50.2
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut" parent="GridContainer/Part1/ButtonLayer/NextStory1" instance=ExtResource( 13 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -5.0
margin_right = 6.0
margin_bottom = 11.0

[node name="Part2" type="Control" parent="GridContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story2" type="ColorRect" parent="GridContainer/Part2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.964706, 0.921569, 0.862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/Part2/Story2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Part2/Story2/HBoxContainer"]
margin_right = 380.0
margin_bottom = 298.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/Part2/Story2/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 380.0
margin_bottom = 91.0
rect_min_size = Vector2( 380, 0 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "You have just moved to a new city"
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="GridContainer/Part2/Story2/HBoxContainer/VBoxContainer"]
margin_left = 40.0
margin_top = 138.0
margin_right = 340.0
margin_bottom = 288.0
rect_min_size = Vector2( 300, 150 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 1.35
texture = ExtResource( 3 )
expand = true

[node name="TTSButton2" type="TextureButton" parent="GridContainer/Part2/Story2/HBoxContainer"]
margin_left = 384.0
margin_right = 484.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
size_flags_vertical = 0
toggle_mode = true
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 19 )
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}
textToSpeak = NodePath("../VBoxContainer/Label")

[node name="Space" parent="GridContainer/Part2/Story2/HBoxContainer/TTSButton2" instance=ExtResource( 20 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.0
margin_top = -9.0
margin_right = 23.0
margin_bottom = 5.0

[node name="ButtonLayer" type="CanvasLayer" parent="GridContainer/Part2"]
layer = 2

[node name="NextStory2" type="TextureButton" parent="GridContainer/Part2/ButtonLayer"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 207.0
margin_top = -352.0
margin_right = 307.0
margin_bottom = -252.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut" parent="GridContainer/Part2/ButtonLayer/NextStory2" instance=ExtResource( 13 )]
margin_left = 40.0
margin_top = 95.0
margin_right = 56.0
margin_bottom = 111.0

[node name="Part3" type="Control" parent="GridContainer"]
margin_top = 302.0
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Story3" type="ColorRect" parent="GridContainer/Part3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.964706, 0.921569, 0.862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/Part3/Story3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Part3/Story3/HBoxContainer"]
margin_right = 380.0
margin_bottom = 298.0
rect_min_size = Vector2( 380, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/Part3/Story3/HBoxContainer/VBoxContainer"]
margin_right = 380.0
margin_bottom = 125.0
rect_min_size = Vector2( 380, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "Each player has a new house. 
Now it is time to furnish it!"
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="GridContainer/Part3/Story3/HBoxContainer/VBoxContainer"]
margin_left = 40.0
margin_top = 138.0
margin_right = 340.0
margin_bottom = 288.0
rect_min_size = Vector2( 300, 150 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 1.35
texture = ExtResource( 4 )
expand = true

[node name="TTSButton" type="TextureButton" parent="GridContainer/Part3/Story3/HBoxContainer"]
margin_left = 384.0
margin_right = 484.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
size_flags_vertical = 2
toggle_mode = true
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 19 )
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}
textToSpeak = NodePath("../VBoxContainer/Label")

[node name="Space" parent="GridContainer/Part3/Story3/HBoxContainer/TTSButton" instance=ExtResource( 20 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.0
margin_top = -9.0
margin_right = 23.0
margin_bottom = 5.0

[node name="ButtonLayer" type="CanvasLayer" parent="GridContainer/Part3"]
layer = 2

[node name="NextStory3" type="TextureButton" parent="GridContainer/Part3/ButtonLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.752
anchor_right = 0.5
anchor_bottom = 0.752
margin_left = -51.0
margin_top = -50.2
margin_right = 49.0
margin_bottom = 49.8
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut" parent="GridContainer/Part3/ButtonLayer/NextStory3" instance=ExtResource( 13 )]
margin_left = 40.0
margin_top = 95.0
margin_right = 56.0
margin_bottom = 111.0

[node name="Part4" type="Control" parent="GridContainer"]
margin_left = 514.0
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story4" type="ColorRect" parent="GridContainer/Part4"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.964706, 0.921569, 0.862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/Part4/Story4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_right = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Part4/Story4/HBoxContainer"]
margin_right = 380.0
margin_bottom = 298.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/Part4/Story4/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 380.0
margin_bottom = 106.0
rect_min_size = Vector2( 380, 0 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "Complete challenges around the city and win objects. You just need to press the dice button!"
valign = 1
autowrap = true

[node name="Story4Image" type="TextureRect" parent="GridContainer/Part4/Story4/HBoxContainer/VBoxContainer"]
margin_left = 40.0
margin_top = 138.0
margin_right = 340.0
margin_bottom = 288.0
rect_min_size = Vector2( 300, 150 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 1.35
texture = ExtResource( 2 )
expand = true

[node name="TTSButton" type="TextureButton" parent="GridContainer/Part4/Story4/HBoxContainer"]
margin_left = 384.0
margin_right = 484.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
size_flags_vertical = 2
toggle_mode = true
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 19 )
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}
textToSpeak = NodePath("../VBoxContainer/Label")

[node name="Space" parent="GridContainer/Part4/Story4/HBoxContainer/TTSButton" instance=ExtResource( 20 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.0
margin_top = -9.0
margin_right = 23.0
margin_bottom = 5.0

[node name="FinalButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -127.0
margin_bottom = -3.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut_rightArrow" parent="FinalButton" instance=ExtResource( 14 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.5
margin_top = -35.0
margin_right = 12.5
margin_bottom = -10.0

[node name="SceneLoader" parent="." instance=ExtResource( 1 )]
next_scene_path = "res://Context Screen/SecondContextScreen.tscn"

[node name="TTS" parent="." instance=ExtResource( 16 )]
pause_mode = 2

[connection signal="show_map" from="GridContainer" to="SceneLoader" method="load_scene"]
[connection signal="stop" from="GridContainer" to="TTS" method="stop"]
[connection signal="talk" from="GridContainer" to="TTS" method="speak"]
[connection signal="talk" from="GridContainer/Part1/Story1" to="TTS" method="speak"]
[connection signal="button_down" from="GridContainer/Part1/Story1/HBoxContainer/TTSButton" to="UISoundManager" method="select"]
[connection signal="pressed" from="GridContainer/Part1/Story1/HBoxContainer/TTSButton" to="GridContainer/Part1/Story1/HBoxContainer/TTSButton" method="repeat"]
[connection signal="stop_talking" from="GridContainer/Part1/Story1/HBoxContainer/TTSButton" to="TTS" method="stop"]
[connection signal="talk" from="GridContainer/Part1/Story1/HBoxContainer/TTSButton" to="TTS" method="speak"]
[connection signal="button_down" from="GridContainer/Part1/ButtonLayer/NextStory1" to="UISoundManager" method="confirm"]
[connection signal="pressed" from="GridContainer/Part1/ButtonLayer/NextStory1" to="GridContainer/Part1/ButtonLayer/NextStory1" method="show_next"]
[connection signal="show_next" from="GridContainer/Part1/ButtonLayer/NextStory1" to="GridContainer" method="show_next"]
[connection signal="pressed" from="GridContainer/Part2/Story2/HBoxContainer/TTSButton2" to="GridContainer/Part2/Story2/HBoxContainer/TTSButton2" method="repeat"]
[connection signal="stop_talking" from="GridContainer/Part2/Story2/HBoxContainer/TTSButton2" to="TTS" method="stop"]
[connection signal="talk" from="GridContainer/Part2/Story2/HBoxContainer/TTSButton2" to="TTS" method="speak"]
[connection signal="button_down" from="GridContainer/Part2/ButtonLayer/NextStory2" to="UISoundManager" method="confirm"]
[connection signal="pressed" from="GridContainer/Part2/ButtonLayer/NextStory2" to="GridContainer/Part2/ButtonLayer/NextStory2" method="show_next"]
[connection signal="show_next" from="GridContainer/Part2/ButtonLayer/NextStory2" to="GridContainer" method="show_next"]
[connection signal="pressed" from="GridContainer/Part3/Story3/HBoxContainer/TTSButton" to="GridContainer/Part3/Story3/HBoxContainer/TTSButton" method="repeat"]
[connection signal="stop_talking" from="GridContainer/Part3/Story3/HBoxContainer/TTSButton" to="TTS" method="stop"]
[connection signal="talk" from="GridContainer/Part3/Story3/HBoxContainer/TTSButton" to="TTS" method="speak"]
[connection signal="button_down" from="GridContainer/Part3/ButtonLayer/NextStory3" to="UISoundManager" method="confirm"]
[connection signal="pressed" from="GridContainer/Part3/ButtonLayer/NextStory3" to="GridContainer/Part3/ButtonLayer/NextStory3" method="show_next"]
[connection signal="show_next" from="GridContainer/Part3/ButtonLayer/NextStory3" to="GridContainer" method="show_next"]
[connection signal="pressed" from="GridContainer/Part4/Story4/HBoxContainer/TTSButton" to="GridContainer/Part4/Story4/HBoxContainer/TTSButton" method="repeat"]
[connection signal="stop_talking" from="GridContainer/Part4/Story4/HBoxContainer/TTSButton" to="TTS" method="stop"]
[connection signal="talk" from="GridContainer/Part4/Story4/HBoxContainer/TTSButton" to="TTS" method="speak"]
[connection signal="button_down" from="FinalButton" to="UISoundManager" method="confirm"]
[connection signal="pressed" from="FinalButton" to="FinalButton" method="show_next"]
[connection signal="show_next" from="FinalButton" to="GridContainer" method="show_next"]

[editable path="GridContainer/Part1/ButtonLayer/NextStory1/Shortcut"]
[editable path="GridContainer/Part2/ButtonLayer/NextStory2/Shortcut"]
